src/test/deca/context/valid/others/print.deca
// Description:
//    print de plusieurs types
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025

{
    println(3);
    println("3");
    println("3.0");
}
