src/test/deca/context/invalid/void_varaibale.deca
// Description:
//    Programme declarant une variable type void .
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   void x;
}